# lib/api/models/Def13.ts
@@ -1,0 +1,74 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kinnema
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { WatchProviderInnerSchema } from './WatchProviderInnerSchema';
+import {
+    WatchProviderInnerSchemaFromJSON,
+    WatchProviderInnerSchemaFromJSONTyped,
+    WatchProviderInnerSchemaToJSON,
+    WatchProviderInnerSchemaToJSONTyped,
+} from './WatchProviderInnerSchema';
+
+/**
+ * 
+ * @export
+ * @interface Def13
+ */
+export interface Def13 {
+    /**
+     * 
+     * @type {Array<WatchProviderInnerSchema>}
+     * @memberof Def13
+     */
+    providers: Array<WatchProviderInnerSchema>;
+}
+
+/**
+ * Check if a given object implements the Def13 interface.
+ */
+export function instanceOfDef13(value: object): value is Def13 {
+    if (!('providers' in value) || value['providers'] === undefined) return false;
+    return true;
+}
+
+export function Def13FromJSON(json: any): Def13 {
+    return Def13FromJSONTyped(json, false);
+}
+
+export function Def13FromJSONTyped(json: any, ignoreDiscriminator: boolean): Def13 {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'providers': ((json['providers'] as Array<any>).map(WatchProviderInnerSchemaFromJSON)),
+    };
+}
+
+export function Def13ToJSON(json: any): Def13 {
+    return Def13ToJSONTyped(json, false);
+}
+
+export function Def13ToJSONTyped(value?: Def13 | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'providers': ((value['providers'] as Array<any>).map(WatchProviderInnerSchemaToJSON)),
+    };
+}
+
