# lib/api/models/Def14.ts
@@ -1,0 +1,81 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kinnema
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface Def14
+ */
+export interface Def14 {
+    /**
+     * 
+     * @type {string}
+     * @memberof Def14
+     */
+    name?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof Def14
+     */
+    priority?: number;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof Def14
+     */
+    isEnabled?: boolean;
+}
+
+/**
+ * Check if a given object implements the Def14 interface.
+ */
+export function instanceOfDef14(value: object): value is Def14 {
+    return true;
+}
+
+export function Def14FromJSON(json: any): Def14 {
+    return Def14FromJSONTyped(json, false);
+}
+
+export function Def14FromJSONTyped(json: any, ignoreDiscriminator: boolean): Def14 {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'] == null ? undefined : json['name'],
+        'priority': json['priority'] == null ? undefined : json['priority'],
+        'isEnabled': json['isEnabled'] == null ? undefined : json['isEnabled'],
+    };
+}
+
+export function Def14ToJSON(json: any): Def14 {
+    return Def14ToJSONTyped(json, false);
+}
+
+export function Def14ToJSONTyped(value?: Def14 | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'name': value['name'],
+        'priority': value['priority'],
+        'isEnabled': value['isEnabled'],
+    };
+}
+
