# lib/api/models/index.ts
@@ -5,13 +5,13 @@ export * from './ApiAuthLoginPostRequest';
 export * from './ApiFavoritesGet200ResponseInner';
 export * from './ApiFavoritesPostRequest';
 export * from './ApiLastWatchedTmdbIdGet404Response';
-export * from './ApiWatchProvidersGet200Response';
-export * from './ApiWatchProvidersGet200ResponseProvidersInner';
 export * from './CreateUserInputType';
 export * from './Def1';
 export * from './Def10';
 export * from './Def11';
 export * from './Def12';
+export * from './Def13';
+export * from './Def14';
 export * from './Def2';
 export * from './Def3';
 export * from './Def4';
@@ -24,3 +24,4 @@ export * from './LastWatchedPatchSchemaInputType';
 export * from './LastWatchedPatchSchemaOutputType';
 export * from './LastWatchedSchemaOutputType';
 export * from './UserSchema';
+export * from './WatchProviderInnerSchema';
